	henk).

	Made it possible to hide Vifm's configuration from Vim when it's not run
	by Vifm's :help command.  Thanks to ranousse.

	Separated Vifm's vimdoc from plugin documentation.

	Do not store temporary messages of command-line in history (progress
	messages).

	Hidden misleading error message from git during successful build.

	Fixed odd creation of ~/.vifm/Trash directory even when it's redefined in
	vifmrc using 'trashdir' option.

	Fixed segmentation fault on running vifm with single argument if restored
	cursor is in the right pane.  Thanks to Svyatoslav Mishyn, a.k.a. juef.

	Fixed visual glitch for long wide character (CJK) file names with disabled
	cropping.  Thanks to anonymous from linux.org.ru.

	Fixed trash emptying when csh-like shell is in use.  Thanks to lyuts.

	Fixed "$APPDATA/Vifm" directory existence check for Vim plugin on Windows.
	Thanks to Jonathan Da Silva.

	Fixed running external commands with long titles inside terminal
	multiplexers.  Invoked shell in current directory.

	Fixed processing of marks command followed by anything in right-hand side of
	a mapping.  Thanks to filterfalse.

	Fixed a minor UI glitch with drawing rightmost character position of the
	stat window after startup.

	Fixed segmentation fault during startup in a small terminal on OS X.
	Thanks to Daniel Dettlaff (a.k.a. dmilith).

	Fixed right aligned cropping for CJK (e.g. viewcolumns={name}..,{} could
	print one more character position or fail due to assertion).

	Fixed unexpectedly broken compilation on FreeBSD.  Thanks to Daniel
	Dettlaff (a.k.a. dmilith).

	Fixed view update after :restart in some cases.  Thanks to filterfalse.

	Fixed UI glitches and most of flickering of the TUI on :restart.

	Fixed check for wrong color number in :highlight.  Thanks to y2kbugger.

	Fixed :highlight command recovery.  Thanks to y2kbugger.

	Fixed :!! command, seems to be not working for a while.

	Fixed segmentation fault on no view history and ":set autochpos" in